@@ -1,0 +1,81 @@
+\."#############################################################################
+\."$Id: cerebro-stat.8.in,v 1.1 2005-07-07 16:37:29 achu Exp $
+\."#############################################################################
+.TH cerebro-stat 8 "May 2005" "cerebro-stat @VERSION@" cerebro-stat
+.SH "NAME"
+cerebro-stat \- cerebro data gathering
+.SH "SYNOPSIS"
+.B cerebro-stat [OPTIONS]
+.br
+.SH "DESCRIPTION"
+The
+.B cerebro-stat
+tool retrieves the currently available metric names and metric data from 
+a 
+.B cerebrod(8)
+metric server.  
+
+The default hostname and port used by 
+.B cerebro-stat
+can be configured using the cerebro configuration file or having a
+cerebro configuration loaded.  The configuration changes can alter the
+features and behavior of the daemon as well as the
+.B Cerebro
+suite of tools and libraries.
+
+See the
+.BR cerebro.conf(5)
+and
+.BR cerebro_module(3) 
+manpages for additional information.
+
+.SH "OPTIONS"
+.TP
+.B  -h, --help
+Output help
+.TP
+.B  -v, --version
+Output version
+.TP
+.B \-o \fISTRING\fR, \fB\-\-hostname\fR=\fISTRING\fR
+Cerebrod metric server hostname (default=localhost)
+.TP
+.B \-p \fIINT\fR, \fB\-\-port\fR=\fIINT\fR
+Cerebrod metric server port (default=8649)
+.TP
+.B -l, --metric-list
+List all available metrics that can be queried
+.TP
+.B -m \FISTRING\fR, \fB\-\-metric\fR=\fISTRING\fR
+Output metric data for the specified metric
+.TP
+.B -U, --up-only
+Restrict metric output only to those nodes that are determined to be up.
+.TP
+.B -D, --none-if-down
+Return a 'none' metric value for down nodes rather that the latest
+metric value received.
+.TP
+.B -N, --none-if-not-monitored
+Return a 'none' metric value for nodes that do not monitor the
+specified metric rather than not outputting anything at all.
+.TP
+.B -n, --newline
+Output nodes one per line
+.TP
+.B -q, --hostrange
+Output nodes in hostrange foramt
+.if @MANPAGE_DEBUG@ \{
+.TP
+.B  -d, --debug
+Turn on debugging
+\}
+
+.SH "FILES"
+@CEREBRO_CONFIG_FILE_DEFAULT@
+
+@CEREBRO_MODULE_DIR@
+.SH "ORIGIN"
+Developed by Albert Chu <chu11@llnl.gov> on LLNL's Linux clusters.
+.SH "SEE ALSO"
+cerebro_module(3), cerebro.conf(5), cerebrod(8)
