@@ -3,6 +3,8 @@
 	* Completed cerebro-stat tool.
 
 	* Added hostlist wrappers.
+
+	* Added cerebro-stat manpage.
 	
 2005-07-06  Albert Chu  <chu11@llnl.gov>
 
